--- a/frontend/src/app/pages/error404/error404.component.html
+++ b/frontend/src/app/pages/error404/error404.component.html
@@ -1,1 +1,41 @@
-<p>error404 works!</p>
+<div class="flex flex-1 h-screen">
+  <div class="flex flex-column w-12 sm:w-8 fadein animation-duration-500">
+    <div class="flex justify-content-between p-4 text-blue-700">
+      <div class="font-bold text-2xl md:text-4xl">
+        <span>LT<span class="text-green-400">.</span>Manager </span>
+      </div>
+    </div>
+    <div class="p-5 flex flex-1 justify-content-center align-items-center">
+      <div class="flex flex-column w-12 lg:w-6 border-round-md p-4 xl:p-6">
+        <strong class="text-5xl sm:text-6xl text-blue-700 text-center"
+          >Error</strong
+        >
+        <strong class="text-7xl sm:text-8xl text-gray-500 text-center"
+          >404</strong
+        >
+        <strong class="text-5xl sm:text-6xl text-blue-700 text-center"
+          >Página não encontrada</strong
+        >
+        <div class="p-fluid mt-4 md:mt-5">
+          <button
+            pButton
+            pRipple
+            label="Ir para Login"
+            [routerLink]="['/login']"
+            class="w-12 mt-4 md:mt-5 p-2 p-button-lg p-3"
+          ></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div
+    class="h-full w-4 bg-yellow-600 overflow-hidden hidden sm:flex sticky top-0 right-0"
+  >
+    <img
+      src="assets/img/cover.png"
+      alt="imagem cover de login"
+      class="h-full"
+      style="transform: translateX(-7%)"
+    />
+  </div>
+</div>
