--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div>
+  <router-outlet></router-outlet>
+  <p-toast
+    position="top-right"
+    [breakpoints]="{
+      '920px': { width: '100%', right: '0', left: '0', margin: '2' }
+    }"
+  ></p-toast>
+</div>
