--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
   <p-toast
     position="top-right"
     [breakpoints]="{
-      '920px': { width: '100%', right: '0', left: '0', margin: '2' }
+      '920px': { width: '100%', right: '0', left: '0' }
     }"
   ></p-toast>
 </div>
