:sparkles: feat: Reverse proxy with nginx

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -94,7 +94,7 @@
       pButton
       label="Sair"
       class="p-button-danger w-12 md:w-4"
-      [routerLink]="['/login']"
+      (click)="logout()"
     ></button>
   </div>
 </p-sidebar>
